# verana

./: .env.example  .gitignore  README.md  USERGUIDE.md  config_loader.py  config_models.py  logging_utils.py  pyproject.toml  requirements.txt  spec_v2.md
.github/workflows/: agent_smoke.yml  python-app.yml
agent/: __init__.py  context.py  core.py  planner.py  project_context.py  react_loop.py
budget/: __init__.py  tracker.py
cli/: display.py  main.py
cli/commands/: budget.py  config.py  mcp.py  mode.py  plugin.py  run.py  session.py  skill.py
config/: mcp_servers.yaml  plugins.yaml  providers.yaml  settings.yaml
demo/: README.md  run_demo.sh
demo/config/: mcp_servers.demo.yaml
demo/mcp/: eda_mcp_server.py  simple_mcp_server.py  terminal_mcp_server.py  waveform_mcp_server.py
demo/rtl_case/: Makefile
llm/: anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
mcp/: __init__.py  base.py  http_client.py  registry.py  stdio_client.py  tool_dispatcher.py
mcp/auth/: __init__.py  api_key.py  bearer.py  oauth.py
modes/: __init__.py  registry.py
modes/builtin/: code.yaml  debug.yaml  plan.yaml  review.yaml  spec.yaml  verify.yaml
plugins/: __init__.py  base.py  loader.py
plugins/builtin/: example_hook.py
plugins_user/: slack_notifier.py  vcd_preprocessor.py
session/: __init__.py  manager.py  models.py
skills/: __init__.py  composer.py  registry.py
skills/builtin/: lint_checker.yaml  rtl_debug.yaml  spec_writer.yaml  testbench_writer.yaml  (+2 more)
tests/: test_terminal_approval_flow.py
(+2 files in other folders)
