[project]
name = "rtl-agent"
version = "0.1.0"
description = "RTL debug and verification AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "rich>=13",
  "pydantic>=2",
  "pyyaml>=6",
  "python-dotenv>=1",
  "httpx>=0.27",
  "anthropic>=0.40",
  "openai>=1.50",
  "google-generativeai>=0.8",
  "ollama>=0.3",
  "anyio>=4",
  "jsonlines>=4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
rtl-agent = "cli.main:app"

[tool.setuptools.packages.find]
include = [
  "agent*",
  "budget*",
  "cli*",
  "llm*",
  "mcp*",
  "modes*",
  "plugins*",
  "session*",
  "skills*",
]

[tool.setuptools]
py-modules = [
  "config_loader",
  "config_models",
  "logging_utils",
]
